tests/backend/probes/t.ml
let foo x =
  [%probe "name_is_too_looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo" (print_int x)];
  x
